# flinting

./: LICENSE  Makefile.am  PackageInfo.g  README.md  autogen.sh  configure.ac  init.g  makedoc.g  read.g
gap/: flinting.gd  flinting.gi
src/: flinting.c
tst/: testall.g
